--- a/views/new-message.ejs
+++ b/views/new-message.ejs
@@ -32,10 +32,10 @@
       </p>
     <% } else { %>
       <p class="post-card__posted">
-        <strong>Posted:</strong> *
+        <strong>Posted:</strong> <img src="/icons/unauthorized.svg" alt="" style="display: inline">
       </p>
       <p class="post-card__by">
-      <strong>By:</strong> *
+      <strong>By:</strong> <img src="/icons/unauthorized.svg" alt="" style="display: inline">
       </p>
     <% } %>
   </div>
