--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,12 +28,16 @@
     </div>
   <div class="home__buttons-wrapper">
     <div class="home__buttons-wrapper-child">
-      <button class="home__messages-btn btn-filled">
-        <a href="/messages">Messages</a>
-      </button>
-      <button class="home__new-message-btn btn-filled">
-        <a href="/new-message">New Message</a>
-      </button>
+      <a href="/messages">
+          <button class="home__messages-btn btn-filled">
+          Messages
+        </button>
+        </a>
+        <a href="/new-message">
+          <button class="home__new-message-btn btn-filled">
+            New Message
+        </button>
+        </a>
     </div>
     <% if (!locals.user.is_member) { %>
     <button class="home__join-btn btn-outlined">
@@ -63,10 +67,10 @@
       </p>
     <% } else { %>
       <p class="post-card__posted">
-        <strong>Posted:</strong> *
+        <strong>Posted:</strong> <img src="/icons/unauthorized.svg" alt="" style="display: inline">
       </p>
       <p class="post-card__by">
-      <strong>By:</strong> *
+      <strong>By:</strong> <img src="/icons/unauthorized.svg" alt="" style="display: inline">
       </p>
     <% } %>
   </div>
