--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,10 @@
 <footer>
   <div class="wrapper">
-    <p>&copy; Birger Andresen</p>
+    <div class="footer-content">
+      <p class="copyright">&copy; Birger Andresen</p>
+      <a class="to-the-top" href="#">
+        <img src="/icons/to-the-top.svg" alt="" />
+      </a>
+    </div>
   </div>
 </footer>
