--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,9 @@
 <footer>
   <div class="wrapper">
     <div class="footer-content">
+      <a class="github" href="#">
+        <img src="/icons/github.svg" alt="" />
+      </a>
       <p class="copyright">&copy; Birger Andresen</p>
       <a class="to-the-top" href="#">
         <img src="/icons/to-the-top.svg" alt="" />
