--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="wrapper">
+  <div class="wrapper" style="height: 100%;">
     <div class="header__content">
       <a href="/">
         <h1 class="header__app-name">House of Messages</h1>
